Move the plug reference to www page, no space for it in paper.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8822 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -359,8 +359,9 @@ are applied, but before the alpha test, and is a usual place to ,,just modify th
 \texttt{fragment\_color} is an \texttt{inout} parameter, by modifying it
 you modify the color that will be displayed on the screen.
 
-We put a short reference at the end of this paper of all
-the plugging points available in our shaders. For each plugging point,
+We have a reference of all the plugging points available in our implementation
+on \myhref{http://vrmlengine.sourceforge.net/compositing\_shaders.php}{http://vrmlengine.sourceforge.net/compositing_shaders.php}.
+For each plugging point,
 like this \texttt{PLUG\_texture\_apply}, we define a list of parameters
 (you have to declare them exactly the same in your code), and we define
 when it is called.
@@ -1023,149 +1024,6 @@ this). But it's not necessary for a working implementation of our effects
 --- we know it because our early implementation was keeping
 the full generated shader code inside one unit, and this approach
 was also working correctly.
-
-\section{Short reference of available plugs}
-
-Below is a quick reference of plugs available in our
-implementation. We have found these plugs to be sufficient for a wide
-range of effects, although of course there's always a place for
-changes and improvements. See our engine website,
-in particular the online reference of our plugs on
-\myhref{http://vrmlengine.sourceforge.net/compositing\_shaders.php}{http://vrmlengine.sourceforge.net/compositing_shaders.php},
-for the most up-to-date list.
-% Remember that you can always define your own plugs in your effects
-% and shader nodes.
-
-Parameter names are shown below merely to document the parameter
-meaning. Of course you can change the parameter names when declaring
-your own plug function. To some extent you can also change the parameter
-qualifiers:
-
-\begin{itemize}
-\itemsep 0pt
-\parskip 0pt
-\parsep 0pt
-\item If a parameter below is "inout", you can change it to "in", or
-    "const in" if you don't want to modify the given value.
-  \item You can also change the "inout" parameter to just "out", if
-    you want to unconditionally overwrite the given value. Although
-    this is usually not advised, as it means that you disable previous
-    effects working on this parameter. Most of the time, summing or
-    multiplying to the previous value is a better choice.
-  \item If a parameter below is shown as "in", you can add or remove
-    the "const" qualifier as you wish. Using "const" may allow the
-    shader compiler for additional optimizations.
-\end{itemize}
-
-\subsection{Vertex shaders plugs}
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{vertex_object_space_change}(
-  inout vec4 vertex_object,
-  inout vec3 normal_object)
-\end{Verbatim}
-
-You can modify the vertex position and normal vector in object space here.
-If you don't need to modify the vertex position,
-consider using the \texttt{vertex\_object\_space}
-instead, that may result in more optimized shader.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{vertex_object_space}(
-  const in vec4 vertex_object,
-  inout in vec3 normal_object)
-\end{Verbatim}
-
-Process the vertex and normal in object space. You cannot change the vertex
-position here, but you can still change the normal vector.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{vertex_eye_space}(
-  const in vec4 vertex_eye,
-  const in vec3 normal_eye)
-\end{Verbatim}
-
-Process the vertex and normal in eye (camera) space.
-
-\subsection{Fragment shaders plugs}
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{fragment_eye_space}(
-  const vec4 vertex_eye,
-  inout vec3 normal_eye)
-\end{Verbatim}
-
-Process the vertex and normal in eye space, at the fragment shader.
-You can modify the normal vector here, this is useful for bump mapping.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{light_scale}(
-  inout float light_scale,
-  const in vec3 normal_eye,
-  const in vec3 light_dir,
-  const in gl_LightSourceParameters light,
-  const in gl_LightProducts light_products,
-  const in gl_MaterialParameters material)
-\end{Verbatim}
-
-Scale the given light source contribution.
-This plug is also available at light source nodes' effects.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{add_light_contribution_front}(
-  inout vec4 color,
-  const in vec4 vertex_eye,
-  const in vec3 normal_eye,
-  const in gl_MaterialParameters material)
-\end{Verbatim}
-
-Add pixel color for a lit material. This is typically used to add the light sources.
-There is also the \texttt{add\_light\_contribution\_back},
-for light contribution on the back side of the faces.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{texture_color}(
-  inout vec4 texture_color,
-  [const in samplerXxx texture,]
-  const in vec4 tex_coord)
-\end{Verbatim}
-
-Calculate or modify the texture color.
-This plug is available for texture effects. The second parameter
-is special: for \texttt{ShaderTexture}, it doesn't exist at all.
-For other texture nodes, the sampler type depends on the corresponding
-X3D texture node: \texttt{sampler2D} for 2D textures,
-\texttt{sampler3D} for 3D textures, \texttt{samplerCube} for cube
-maps, and \texttt{sampler2DShadow} for \texttt{GeneratedShadowMap}.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{texture_apply}(
-  inout vec4 fragment_color,
-  const in vec3 normal_eye)
-\end{Verbatim}
-
-At this point, the textures are applied. You can change the fragment
-color now, for various effects.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{fog_apply}(
-  inout vec4 fragment_color,
-  const vec3 normal_eye_fragment)
-\end{Verbatim}
-
-At this point, the X3D fog is applied. Again you can change here the
-fragment color, as you desire. This plug is called after
-the \texttt{texture\_apply}, because you usually want to apply the fog
-to the final (textured) fragment color.
-
-\begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_\codeem{fragment_end}(
-  const in vec4 fragment_color)
-\end{Verbatim}
-
-Do the final processing of the fragment. This is called after applying
-both textures and fog, and cannot modify the fragment color anymore.
-This is useful for operations like alpha-testing the fragment.
 
 \section{Complete example models}
 
