More preparations of paper for TPCG:
 * They also want to embed fonts, so "pdffonts compositing_shaders.pdf" still wanted.
 * Use \webLink in bib and \URL in tex, they advice this.
 * Better and shorter "Volumetric Fogging 2" citation
 * \author adjusted to their format
 * Change abstract, to emphasize that we're presenting something new, and something suitable for 3D scene graphs --- not just X3D.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8825 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -7,41 +7,43 @@
   title = "{Extensible 3D (X3D) Graphics Standard}",
   author = "{Web 3D Consortium}",
   year = "2008",
-  howpublished = "ISO/IEC 19775-1.2:2008; see \url{http://web3d.org/x3d/specifications/}"
+  howpublished = "ISO/IEC 19775-1.2:2008; see \webLink{http://web3d.org/x3d/specifications/}"
 }
 
 %% misc{vrmleng:bumpmapping,
 %%   title = "{Bump mapping extensions}",
 %%   author = "Michalis Kamburelis",
 %%   year = "2008",
-%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php#section_ext_bump_mapping}"
 %% }
 
 @misc{humus:volumetricfog,
   title = "{Volumetric Fogging 2}",
-  author = {Emil Persson "Humus"},
+  author = {Emil Persson},
   year = "2006",
-  howpublished = "\url{http://www.humus.name/index.php?page=3D&ID=70}; nice overview also on \url{http://www.evl.uic.edu/sjames/cs525/shader.html}"
+  howpublished = "\webLink{http://www.humus.name/index.php?page=3D&ID=70}"
 }
+%% "Humus"
+%% ; nice overview also on \webLink{http://www.evl.uic.edu/sjames/cs525/shader.html}
 
 %% misc{vrmleng:texcoordbounds,
 %%   title = "Tex coord generation dependent on bounding box",
 %%   author = "Michalis Kamburelis",
 %%   year = "2010",
-%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
 %% }
 
 %% misc{vrmleng:projectivetexturing,
 %%   title = "Projective texture mapping",
 %%   author = "Michalis Kamburelis",
 %%   year = "2010",
-%%   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
 %% }
 
 @misc{ogre:shader,
   title = "{OGRE Wiki - RT Shader System}",
   author = "{OGRE}",
-  howpublished = "\url{http://www.ogre3d.org/tikiwiki/RT+Shader+System&structure=Development}"
+  howpublished = "\webLink{http://www.ogre3d.org/tikiwiki/RT+Shader+System&structure=Development}"
 }
 
 %% Links to "Metaprogramming GPUs with Sh":
@@ -58,23 +60,23 @@
 %% misc{glsl,
 %%   title = "{OpenGL Shading Language}",
 %%   author = "{Khronos Group}",
-%%   howpublished = "\url{http://www.opengl.org/documentation/glsl/}"
+%%   howpublished = "\webLink{http://www.opengl.org/documentation/glsl/}"
 %% }
 
 %% misc{cg,
 %%   title = "{Cg - The Language for High-Performance Realtime Graphics}",
 %%   author = "{NVidia}",
-%%   howpublished = "\url{http://developer.nvidia.com/page/cg_main.html}"
+%%   howpublished = "\webLink{http://developer.nvidia.com/page/cg_main.html}"
 %% }
 
 %% misc{hlsl,
 %%   title = "{HLSL}",
 %%   author = "{Microsoft}",
-%%   howpublished = "\url{http://msdn.microsoft.com/en-us/library/bb509561\%28v=vs.85\%29.aspx}"
+%%   howpublished = "\webLink{http://msdn.microsoft.com/en-us/library/bb509561\%28v=vs.85\%29.aspx}"
 %% }
 
 %% misc{instant:noisetex,
 %%   title = "{NoiseTexture}",
 %%   author = "{Instant Reality}",
-%%   howpublished = "\url{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
+%%   howpublished = "\webLink{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
 %% }
