--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -133,7 +133,7 @@ designed for rendering a particular shape.
 
 We argue that a different approach is needed in many situations.
 Authors usually would like to keep the normal rendering features working,
-and only add their own effects on top of it. The browser
+and only add their own effects on top of it. The 3D renderer
 implementation usually already has an extensive internal shaders system,
 and the authors should be able to depend on these internal shaders
 to do the common job.
@@ -170,8 +170,8 @@ shadows from 2nd light, shadows from both lights.}
 \end{figure*}
 
 We present a system for creating effects by essentially compositing together
-a pieces of shader code. All the effects defined this way effortlessly
-cooperate and can be combined with each other and with browser internal
+pieces of a shader code. All the effects defined this way effortlessly
+cooperate and can be combined with each other and with application internal
 shaders. This makes shader programs:
 
 \begin{enumerate}
@@ -192,9 +192,10 @@ shaders. This makes shader programs:
 It is important that we still keep
 the full power of a chosen GPU shading language.
 We deliberately do not try to invent here a new language, or wrap existing
-language in some cumbersome limitations. This is most flexible for authors,
-and it also allows an easy implementation --- there is no need for any complex
-shading language processing inside the X3D browser.
+language in some cumbersome limitations.
+%% This is most flexible for authors,
+%% and it also allows an easy implementation --- there is no need for any complex
+%% shading language processing inside the application.
 
 \section{Motivation and previous work}
 
@@ -247,9 +248,10 @@ object-oriented concepts to create a general shader that can
 later be extended, for example by overriding virtual
 methods. However, this is a solution closely coupled with C++. It's
 suitable if you have a 3D engine in C++, and you want to use it in your
-own C++ program and extend its shaders. In this paper, we want to
-create a solution that is absolutely separate from the programming
-language used to develop a browser. Invoking a compiler to generate a
+own C++ program and extend its shaders. Our solution is simpler,
+treating shader effects as part of the 3D content, and can
+be integrated into a renderer regardless of it's programming language.
+Invoking a compiler to generate a
 final GPU shader, not to mention forcing users to learn C++, is out of the
 question.
 
@@ -277,23 +279,23 @@ their own hooks (for use by other modules) and invoke them when appropriate.
 This creates a system where it's trivially easy to define a hook,
 and to use a hook.
 Many modules can implement the same hook and cooperate without any problems.
-The whole hook system is defined completely in PHP, as it's a scripting
-language, and you can query the list of loaded functions by name,
-and call function by its name.
-
+%% The whole hook system is defined completely in PHP, as it's a scripting
+%% language, and you can query the list of loaded functions by name,
+%% and call function by its name.
 Drupal approach is actually quite similar to our
 core idea of combining effects. Our effects are similar to
 Drupal's modules, and our ,,plugging points'' are analogous to Drupal hooks.
-Our effects can define functions with special names to enhance
-the standard shader behavior, just like Drupal modules can define functions
-to act on an event from another module.
-We can also define new plugs, for other effects to use.
-Of course we also have some special problems
-(shading language is quite far from a scripting language,
-so calling the plugs must be implemented by text replacements inside the browser)
-and some special opportunities (we can define effects at
-the appropriate nodes of X3D, like textures and lights sources,
-as we don't want to throw all the effects in one bag).
+
+%% Our effects can define functions with special names to enhance
+%% the standard shader behavior, just like Drupal modules can define functions
+%% to act on an event from another module.
+%% We can also define new plugs, for other effects to use.
+%% Of course we also have some special problems
+%% (shading language is quite far from a scripting language,
+%% so calling the plugs must be implemented by text replacements)
+%% and some special opportunities (we can define effects at
+%% the appropriate nodes of X3D, like textures and lights sources,
+%% as we don't want to throw all the effects in one bag).
 
 % OpenSceneGraph:
 % http://www.openscenegraph.org/projects/osg/wiki/Support/Tutorials/ShadersParameters
@@ -321,7 +323,7 @@ these places \textit{plugs}, as they act like sockets where a logic
 may be added. Each plug has a name, and a given set of parameters.
 The effects can use special function names, starting with \texttt{PLUG\_}
 and followed by the plug name. These declarations will be found,
-and the browser will insert appropriate calls to them from the base shader.
+and the renderer will insert appropriate calls to them from the base shader.
 
 A trivial example of an effect that makes colors two times brighter
 is below. This example is presented in the X3D classic (VRML) encoding.
@@ -346,7 +348,7 @@ effects Effect \{
 This defines a GLSL function named \texttt{PLUG\_texture\_apply}
 within an \texttt{EffectPart} node. The call to this function will
 be automatically inserted at the \texttt{texture\_apply} plug point in
-the browser internal shader. This particular plug,
+the renderer internal shader. This particular plug,
 the \texttt{PLUG\_texture\_apply}, is called after the normal texture colors
 are applied, but before the alpha test, and is a usual place to ,,just modify the pixel color''.
 \texttt{fragment\_color} is an \texttt{inout} parameter, by modifying it
@@ -364,7 +366,7 @@ Many usage scenarios are possible:
 \begin{enumerate}
 
 \item The \texttt{Effect} nodes may refer to plug names
-defined inside the browser internal shaders. This is the most usual case.
+defined inside the application internal shaders. This is the most usual case.
 It allows the authors to extend or override a particular shading parameter.
 
 \item The \texttt{Effect} nodes may also use the plug names defined
@@ -373,7 +375,7 @@ It is trivially easy (you just add a ,,magic'' comment) to define
 plugging points in your own shader code, and this way your own effects
 can be customized.
 
-\item Inside the browser implementation, the same approach can be used
+\item Inside the application implementation, the same approach can be used
 to implement some internal effects.
 We have reimplemented many internal effects of our engine,
 like the fog, shadow maps and the bump mapping to use our ,,plugs'' approach.
@@ -385,7 +387,7 @@ the authors have the power to implement such effects easily by themselves.
 %% achieved using standard \texttt{ComposedShader} as well,
 %% but then you have to write all this ,,boilerplate'' code to also deal
 %% with all the possible lighting and textures configurations.
-%% Well, the browser is still useful to calculate nice tangent vectors,
+%% Well, the application is still useful to calculate nice tangent vectors,
 %% although an authoring program could generate GLSL attributes for them as well.
 
 %% Same thing with shadow maps, they only plug to the \texttt{light\_scale}
@@ -394,18 +396,18 @@ the authors have the power to implement such effects easily by themselves.
 \end{enumerate}
 
 Actually, there are even more possibilities.
-We have been talking above about the ,,browser internal shaders'',
+We have been talking above about the ,,application internal shaders'',
 but the truth is a little more flexible.
 When you place a standard shader node
 (like a \texttt{ComposedShader} node for GLSL shaders) on the
 \texttt{Appearance.shaders} list,
-then it replaces the internal browser shaders.
+then it replaces the internal application shaders.
 If you define the same (or compatible) plugging points inside your shader,
-then the browser effects will be even added to your own
+then the application effects will be even added to your own
 shader. And of course user effects are added to your shader too.
 This way we have made even the standard shader nodes much more flexible.
 Note that if you don't define any plugs inside your \texttt{ComposedShader} node,
-it continues to function as before --- no effects, from browser or author,
+it continues to function as before --- no effects, from application or author,
 will be added.
 
 \subsection{Effect node}
@@ -417,16 +419,12 @@ the source code and uniform values specific to a given effect.
 \underline{Effect : X3DChildNode}
 \begin{Verbatim}[commandchars=\\\{\}]
 SFString [] \codeem{language} ""
-  # Just like ComposedShader.language.
-  # This effect will be used only when
-  # the base shader (browser internal
-  # or selected from Appearance.shaders)
-  # has the same language.
+  # Shading language: "GLSL", "CG",
+  # "HLSL". This effect will be used
+  # only when the base renderer shader
+  # uses the same language.
 SFBool [in,out] \codeem{enabled} TRUE
-  # Allows to easily turn on/off the effect.
-  # You could also remove/add the node
-  # from the scene, but often toggling
-  # this field is easier for scripts.
+  # Easily turn on/off the effect.
 MFNode [] \codeem{parts} [] # EffectPart
 
 # And any number of uniform variables,
@@ -437,6 +435,11 @@ fieldType [out]    fieldName
 fieldType [in,out] fieldName
 \end{Verbatim}
 \end{mycode}
+
+% Comments for ,,enabled'':
+%% # You could also remove/add the node
+%% # from the scene, but often toggling
+%% # this field is easier for scripts.
 
 \needspace{1in}
 The effect source code is split into a number of parts:
