--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -157,15 +157,15 @@ we want to modify all the light sources.
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=2.0in]{rhan_shrine_0}
+  %% \includegraphics[width=2.0in]{rhan_shrine_0}
   \includegraphics[width=2.0in]{rhan_shrine_1_per_pixel_lighting}
   \includegraphics[width=2.0in]{rhan_shrine_2_bump_mapping}
-  \includegraphics[width=2.0in]{rhan_shrine_3_shadow_1st}
-  \includegraphics[width=2.0in]{rhan_shrine_4_shadow_2nd}
+  %% \includegraphics[width=2.0in]{rhan_shrine_3_shadow_1st}
+  %% \includegraphics[width=2.0in]{rhan_shrine_4_shadow_2nd}
   \includegraphics[width=2.0in]{rhan_shrine_5_everything}
-  \caption{Japanese shrine model with more and more effects applied: Gouraud shading,
-Phong shading (per-pixel lighting), bump mapping, shadows from 1st light,
-shadows from 2nd light, shadows from both lights.}
+  \caption{Japanese shrine model with more and more effects applied:
+Phong shading (per-pixel lighting), bump mapping, shadows from two lights.
+The model is based on \texttt{http://opengameart.org/content/shrine-shinto-japan}.}
 %%  \label{fig_xxx}
 \end{figure*}
 
@@ -1061,10 +1061,6 @@ in perfect specular highlights and spot light shapes.
 A lot of people helped and encouraged the development of our VRML/X3D engine,
 with it's rendering features and extensions. A big ,,thank you''
 goes to all of you.
-
-The Japanese shrine model, used for an eye-candy screenshots
-at the beginning of this paper, comes from
-\URL{http://opengameart.org/content/shrine-shinto-japan}.
 
 \bibliographystyle{eg-alpha}
 % \nocite{*}
