Make images shorter, to consume less space.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8830 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -605,7 +605,7 @@ or Cook-Torrance.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=3in]{fancy_light_spot_shape}
+  \includegraphics[width=3in]{fancy_light_spot_shape-cropped}
   \caption{Textured spot light with shadow.}
 \end{figure}
 
@@ -751,7 +751,7 @@ coordinates in the \texttt{texture\_color} plug.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=3in]{shader_texture_no_filtering_problems}
+  \includegraphics[width=3in]{shader_texture_no_filtering_problems-cropped}
   \caption{Yellowish arc is done by a texture effect, as so is not
     affected by the pixelated look of the base image texture.}
 \end{figure}
@@ -929,7 +929,7 @@ may be implemented on GPU by a simple prototype using the \texttt{ShaderTexture}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=3in]{noise}
+  \includegraphics[width=3in]{noise-cropped}
   \caption{3D and 2D smooth noise on GPU, wrapped in a ShaderTexture.}
 \end{figure}
 
