Better wording --- "with the help of our effects".
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8836 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -943,7 +943,8 @@ may be implemented on GPU by a simple prototype using the \texttt{ShaderTexture}
   \label{fig_noise}
 \end{figure}
 
-Another example is \emph{water}. Water is very easy to implement using our effects,
+Another example is \emph{water}.
+Water is very easy to implement with the help of our effects,
 as a proper water simulation
 is naturally a combination of a couple effects.
 You want to simulate waves, so you want to vary vertex
