Citation for "X3D programmable shaders".
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8837 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -10,6 +10,24 @@
   howpublished = "ISO/IEC 19775-1.2:2008; see \webLink{http://web3d.org/x3d/specifications/}"
 }
 
+@inproceedings{x3d:shaders,
+  author = {de Carvalho, Gon\c{c}alo Nuno Moutinho and Gill, Tony and Parisi, Tony},
+  title = "{X3D programmable shaders}",
+  booktitle = {Proceedings of the ninth international conference on 3D Web technology},
+  series = {Web3D '04},
+  year = {2004},
+  isbn = {1-58113-845-8},
+  location = {Monterey, California},
+  pages = {99--108},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/985040.985055},
+  doi = {http://doi.acm.org/10.1145/985040.985055},
+  acmid = {985055},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {GPU, VRML, X3D, programmable shading, real-time shading, stream processors},
+}
+
 %% misc{vrmleng:bumpmapping,
 %%   title = "{Bump mapping extensions}",
 %%   author = "Michalis Kamburelis",
